--- a/BF1ServerTools.API/BF1ServerTools.API.csproj
+++ b/BF1ServerTools.API/BF1ServerTools.API.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="pythonnet" Version="3.0.5" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
   </ItemGroup>
 
