--- a/BF1ServerTools.SDK/BF1ServerTools.SDK.csproj
+++ b/BF1ServerTools.SDK/BF1ServerTools.SDK.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="pythonnet" Version="3.0.5" />
   </ItemGroup>
 
   
