--- a/BF1ServerTools/BF1ServerTools.csproj
+++ b/BF1ServerTools/BF1ServerTools.csproj
@@ -8,8 +8,8 @@
 		<UseWPF>true</UseWPF>
 		<Platforms>x64;ARM64;x86</Platforms>
 		<StartupObject>BF1ServerTools.App</StartupObject>
-		<AssemblyVersion>2.2.7.3</AssemblyVersion>
-		<FileVersion>2.2.7.3</FileVersion>
+		<AssemblyVersion>2.2.8</AssemblyVersion>
+		<FileVersion>2.2.8</FileVersion>
 		<ApplicationManifest>Properties\app.manifest</ApplicationManifest>
 		<ApplicationIcon>Assets\Images\Favicon.ico</ApplicationIcon>
 		<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
@@ -92,6 +92,7 @@
 		<PackageReference Include="OpenCvSharp4" Version="4.10.0.20241108" />
 		<PackageReference Include="OpenCvSharp4.Extensions" Version="4.10.0.20241108" />
 		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
+		<PackageReference Include="pythonnet" Version="3.0.5" />
 		<PackageReference Include="SharpAvi" Version="3.0.1" />
 		<PackageReference Include="SharpDX" Version="4.2.0" />
 		<PackageReference Include="SharpDX.Direct2D1" Version="4.2.0" />
